@@ -1,7 +1,7 @@
 Package: chngpt
 LazyLoad: yes
 LazyData: yes
-Version: 2020.5-13
+Version: 2020.5-21
 Title: Estimation and Hypothesis Testing for Threshold Regression
 Authors@R: c(person("Youyi", "Fong", role = "cre", email = "youyifong@gmail.com"), person("Adam", "Elder", role = "aut", email = "eldera3@uw.edu"), person("Hyunju", "Son", role = "aut", email = "hson@uw.edu"), person("Zonglin", "He", role = "aut", email = "nkhezl@gmail.com"), person("Tao", "Yang", role = "aut", email = "tyang23@fredhutch.org"))
 Maintainer: Youyi Fong <youyifong@gmail.com>
@@ -9,14 +9,14 @@ Depends: R (>= 3.5.0)
 Suggests: R.rsp, RUnit, mvtnorm
 Imports: survival, splines, kyotil, boot, MASS, methods
 VignetteBuilder: R.rsp
-Description: Threshold regression models are also called two-phase regression, broken-stick regression, split-point regression, structural change models, and regression kink models, with and without interaction terms. Methods for both continuous and discontinuous threshold models are included, but the support for the former is much greater. This package is described in Fong, Huang, Gilbert and Permar (2017) chngpt: threshold regression model estimation and inference, BMC Bioinformatics, in press, DOI:10.1186/s12859-017-1863-x. 
+Description: Threshold regression models are also called two-phase regression, broken-stick regression, split-point regression, structural change models, and regression kink models, with and without interaction terms. Methods for both continuous and discontinuous threshold models are included, but the support for the former is much greater. This package is described in Fong, Huang, Gilbert and Permar (2017) <DOI:10.1186/s12859-017-1863-x>. 
 License: GPL (>= 2)
 NeedsCompilation: yes
-Packaged: 2020-05-13 15:50:44 UTC; Youyi
+Packaged: 2020-05-22 05:03:52 UTC; Youyi
 Author: Youyi Fong [cre],
   Adam Elder [aut],
   Hyunju Son [aut],
   Zonglin He [aut],
   Tao Yang [aut]
 Repository: CRAN
-Date/Publication: 2020-05-13 18:20:13 UTC
+Date/Publication: 2020-05-22 05:40:02 UTC
